# Clinical-AI-Demos

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  releases.md  ruff.toml
demo-projects/07-humanoid/paper/codegen/: Cargo.toml  README.md  architecture.md  docker-compose.yml  pyproject.toml
demo-projects/07-humanoid/paper/codegen/config/: escalation_rules.yaml  h2_humanoid.yaml  iterations.yaml  llm_loop.yaml  network.yaml  site_coordination.yaml  site_frame_bounds.yaml  swarm_coordination.yaml
demo-projects/07-humanoid/paper/codegen/data/: ctcae_decision_table.csv  human_team_baseline.csv  sample_sensor.csv  sample_xyz.csv  samples.jsonl
demo-projects/07-humanoid/paper/codegen/diagrams/: ae_response_flow.txt  network_layout.txt  swarm_dance.txt
demo-projects/07-humanoid/paper/codegen/notebooks/: run_log.ipynb
demo-projects/07-humanoid/paper/codegen/schemas/: ae_event.schema.json  ctcae_grading.schema.json  fda_rtct_submission.schema.json  humanoid_command.schema.json  llm_decision.schema.json  metrics.schema.json  peer_handoff.schema.json  physician_escalation.schema.json  robot_camarade_state.schema.json  sponsor_acknowledgment.schema.json  swarm_message.schema.json
demo-projects/07-humanoid/paper/codegen/src/: broadcaster.py  cartesian_planner.py  check_errors.py  comms_intellectual.py  comms_physical.py  compare_agent.py  compute.py  cross_site_bus.py  ctcae_grader.py  fda_rtct_submitter.py  figures_gen.py  h2_dispatcher.py  ingest.py  iterate.py  kinematics.yaml  llm_planner.py  peer_state_tracker.py  physician_escalation.py  prompt_frozen.md  robot_loop.cpp  runner.rs  runner_main.rs  sensor_to_xyz.py  site_runtime.py  (+3 more)
(+329 files in other folders)
