[project]
name = "pat-net-001-ae-swarm"
version = "0.4.0"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Kevin Kawchak", email = "kevin@chemicalqdevice.com" },
]
description = "PAT-NET-001 24/7 Camarade Swarm Adverse Event Response (Demo 07 v0.4.0 Codegen)"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "duckdb>=1.0",
  "jsonschema>=4.21",
  "pyyaml>=6",
  "matplotlib>=3.8",
  "jupyter>=1.0",
  "scipy>=1.12",
  "anthropic>=0.30",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "yamllint>=1.35",
  "pytest>=8",
  "pytest-cov>=5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend = "../../../../ruff.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
addopts = "-q --strict-markers"
